# ws_stm32g431cbu

./: .gitignore  LICENSE  README.md  stm32g4-fdcan-fw_baram.code-workspace
STM32G4-FDCAN/: .mxproject  STM32G4-FDCAN.ioc
STM32G4-FDCAN-CUBE/: STM32G4-FDCAN-CUBE.ioc
STM32G4-FDCAN-CUBE/Core/Inc/: stm32g4xx_hal_conf.h
STM32G4-FDCAN-CUBE/Core/Src/: main.c  stm32g4xx_hal_msp.c
STM32G4-FDCAN/App/ap/: ap.hpp  ap_def.h  def.err.hpp  def_obj.hpp
STM32G4-FDCAN/App/bsp/: bsp.c
STM32G4-FDCAN/App/exhw/: exhw.h  exhw_def.h
STM32G4-FDCAN/App/hw/: hw_def.h
STM32G4-FDCAN/Core/Inc/: main.h  stm32g4xx_hal_conf.h
STM32G4-FDCAN/Core/Src/: main.c  main.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c
_api/VS2022_usbDevice/: VS2022_usbDevice.sln
_api/VS2022_usbDevice/usbDevice/: main.cpp  usbDevice.vcxproj
_cpp_class/: def.hpp
_cpp_class/cli/: mcc_cli.cpp  mcc_cli.hpp
_cpp_class/fd_can/: fd_can.hpp  main.cpp
_cpp_class/hw/: net_comm.hpp  serial_comm.hpp
_cpp_class/interface/: IComm.hpp
_cpp_class/json/: mcc_json.cpp  mcc_json.hpp  tiny_json.cpp
_cpp_class/log/: ex_1_log.cpp  log_main.cpp  mcc_log.hpp
_cpp_class/mcc_library/: mcc_conversion.hpp  mcc_types.hpp  mcc_utils.hpp
_vscode/: stm32g4-fdcan-fw.code-workspace
_vscode/stm32g4-fdcan-fw/tools/: arm-none-eabi-gcc.cmake
baram_proj/firmware/: stm32g4-fdcan-boot.code-workspace  stm32g4-fdcan-fw.code-workspace
stm32g431_fd_can_eda_fw/: CMakeLists.txt  STM32G431CBUX_FLASH.ld  memo.txt  ng_memo.txt
stm32g431_fd_can_eda_fw/tools/: arm-none-eabi-gcc.cmake
stm32g431_fd_can_fw/: CMakeLists.txt  stm32g431_fd_can_fw.ioc
stm32g431_fd_can_fw/App/ap/: ap.cpp  ap.hpp  ap_def.h  def_err.hpp  def_obj.hpp
stm32g431_fd_can_fw/App/ap/_inc/: ap_utils.hpp  cnComm.hpp  enBtn.hpp  enComm.hpp  enLed.hpp  enTask_boot.hpp  iComm.hpp  task_boot.hpp  uart_cmd.hpp
stm32g431_fd_can_fw/App/bsp/: bsp.c
stm32g431_fd_can_fw/App/common/: err_code.h
stm32g431_fd_can_fw/App/common/core/: qbuffer.c  qbuffer.h  utils.c
stm32g431_fd_can_fw/App/common/inc_hw/: cli.h  flash.h  fs.h  log.h  nvs.h  rtc.h  spi.h  uart.h
stm32g431_fd_can_fw/App/exhw/: exhw.c  exhw_def.h
stm32g431_fd_can_fw/App/exhw/driver/: button.c
stm32g431_fd_can_fw/App/hw/: hw.c  hw.h
stm32g431_fd_can_fw/App/hw/driver/: flash.c  nvs.c  rtc.c  spi.c  spi_flash.c  swTimer.c
stm32g431_fd_can_fw/Core/Inc/: main.h  stm32g4xx_it.h
stm32g431_fd_can_fw/Core/Src/: main.cpp  stm32g4xx_it.c
stm32g431_fd_can_fw/Core/Startup/: startup_stm32g431cbux.s
stm32g431cbu6_cube/: stm32g431cbu6_cube.ioc
(+154 files in other folders)
